--- a/pages/404.md
+++ b/pages/404.md
@@ -18,3 +18,11 @@ God above and the devil below him
 You got your reasons and I got my wants
 
 Still got that feeling, but I'm too old to die young now
+
+Too old to die young now
+
+Above or below the ground
+
+Yes, too old to die young now
+
+Still the good lord might lay me down
