--- a/pages/404.md
+++ b/pages/404.md
@@ -1,9 +1,8 @@
 ---
 layout: page
-title: 页面没有找到
-description: 你来到了一片荒芜之地
-keywords: 404
-comments: false
+title: 页面未找到
+description: 我是谁? 我从哪里来? 要到哪里去?
+comments: true
 permalink: /404.html
 ---
 
